fixed style on the header, so it looks fine on small phones

--- a/client/src/components/m-header/header.scss
+++ b/client/src/components/m-header/header.scss
@@ -1,15 +1,34 @@
 header {
     text-align: center;
-    .menu-header {
+
+    .mobile-menu-header {
         display: inline-flex;
+        place-content: center;
         padding: calc(25px + 5vw) 0;
         padding-bottom: calc(10px + 2vw);
         align-items: center;
         box-shadow: 0px 4px 10px 0px #00000052;
         width: 100%;
 
-        .logo-container { 
+        div:first-child {
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        .logo-container {
             padding: unset;
+            max-width: 200px;
+
+            .logo-container__img {
+                max-width: unset;
+            }
+        }
+
+        .burgermenu {
+            margin: unset;
+            padding: unset;
+            display: inline-flex;
+            float: left;
         }
     }
 }
